# ft_printf

./: CMakeLists.txt  CMakeLists1.txt  Makefile  a.out  flags.c  ft_printf.c  ft_printf.h  main.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strjoin_free2.c  (+18 more)
src/: flags.c  ft_intmax.c  ft_printf.c  ft_printf.h  last_flags.c  main.c  print_di.c  print_f.c  print_o.c  print_oo.c  print_p.c  print_type_field.c  print_u.c  print_xX.c  print_xx.c
